chore: get fonts from npm

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,7 +12,10 @@
 /* @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap'); */
 
 
-@import url('/src/css/fonts.css');
+@import "@fontsource/ibm-plex-sans/400.css";
+@import "@fontsource/ibm-plex-sans/600.css";
+@import "@fontsource/ibm-plex-sans/400-italic.css";
+@import "@fontsource/ibm-plex-sans/600-italic.css";
 
 
 /********** Global variables ************/
