--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -117,8 +117,20 @@
 
 /********** General and Landing page ************/
 
-div[class^='announcementBar_'] {
+/* div[class^='announcementBar_'] {
   --site-announcement-bar-stripe-color1: rgba(0, 156, 188, 0.15);
+  --site-announcement-bar-stripe-color2: white;
+  background: repeating-linear-gradient(
+    -35deg,
+    var(--site-announcement-bar-stripe-color1),
+    var(--site-announcement-bar-stripe-color1) 20px,
+    var(--site-announcement-bar-stripe-color2) 10px,
+    var(--site-announcement-bar-stripe-color2) 40px
+  );
+} */
+
+div[class^='announcementBar_'] {
+  --site-announcement-bar-stripe-color1: rgba(227, 6, 19, 0.15);
   --site-announcement-bar-stripe-color2: white;
   background: repeating-linear-gradient(
     -35deg,
