--- a/src/components/eln/Eln.module.css
+++ b/src/components/eln/Eln.module.css
@@ -10,8 +10,11 @@
 /* Search / Filter section */
 
 .eln__searchfilter {
-    padding: 0;
-    width: 100%;
+    width: calc(96% + 0.75rem);
+    margin: 0.1rem;
+    padding: 0.75rem;
+    border: 1px dashed var(--ifm-color-primary);
+    margin-bottom: 0.75rem;
 }
 
 .eln__card {
@@ -37,6 +40,13 @@
     .eln {
         display: flex;
         flex-direction: column;
+    }
+
+    .eln__searchfilter {
+        width: 100%;
+        padding: 0.75rem;
+        border: 1px dashed var(--ifm-color-primary);
+        margin-bottom: 0.75rem;
     }
 
     .eln__card {
