--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -585,7 +585,8 @@ table thead tr {
     margin: unset;
 }
 
-.lbe__searchfilter__section h4 {
+.lbe__searchfilter__section h4,
+h5 {
     margin: 0.5rem 0;
 }
 
