--- a/src/components/eln/Eln.module.css
+++ b/src/components/eln/Eln.module.css
@@ -42,6 +42,17 @@
     text-align: center;
 }
 
+.eln__searchfilter__search__button {
+    position: absolute;
+    right: 1.5rem;
+    top: 50%;
+    transform: translate(0, -50%);
+    padding: 0;
+    background: none;
+    border: none;
+    line-height: 1rem;
+}
+
 .eln__card {
     width: 49.5%;
     padding: 0.75rem;
