--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -115,6 +115,31 @@
     --repo-line: #7f7f7f;
 }
 
+/********** Algolia Search ************/
+
+[data-theme="light"] .DocSearch {
+    /* --docsearch-primary-color: var(--ifm-color-primary); */
+    /* --docsearch-text-color: var(--ifm-font-color-base); */
+    --docsearch-muted-color: var(--ifm-color-primary);
+    --docsearch-container-background: rgba(94, 100, 112, 0.7);
+    --docsearch-focus-color: var(--ifm-color-primary);
+    --docsearch-highlight-color: var(--ifm-color-primary);
+    --docsearch-secondary-text-color: var(--ifm-color-primary);
+    /* Modal */
+    --docsearch-modal-background: var(--ifm-color-white);
+    /* Search box */
+    --docsearch-searchbox-background: var(--ifm-color-white);
+    --docsearch-searchbox-focus-background: var(--ifm-color-white);
+    --docsearch-icon-color: var(--ifm-color-primary);
+    /* Hit */
+    --docsearch-hit-color: var(--ifm-color-primary);
+    --docsearch-hit-active-color: var(--ifm-color-white);
+    --docsearch-hit-background: var(--ifm-color-white);
+    --docsearch-hit-highlight-color: var(--ifm-menu-color-background-hover);
+    /* Footer */
+    --docsearch-footer-background: var(--ifm-color-white);
+}
+
 /********** General and Landing page ************/
 
 /* div[class^='announcementBar_'] {
