--- a/src/components/chemotion/ChemotionLifecycle.module.css
+++ b/src/components/chemotion/ChemotionLifecycle.module.css
@@ -1,39 +1,50 @@
 /********** Repo decision tree ************/
 
+:root {
+	--svgLifecycle-duration: 0.2s;
+}
+
 .svgIcons {
 	fill: var(--ifm-color-primary);
 }
 
 .svgIconText {
-	font-size: 120px;
+	font-size: 15px;
 	fill: var(--ifm-color-primary);
 	font-weight: 300;
-	transform: scale(1);
-	transform-origin: center;
-	transition:
-		transform 0.4s ease,
-		fill 0.4s ease;
+}
+
+g.svgLifecycle {
+	scale: 0.9;
+	transform-origin: 50% 50%;
 }
 
 g.svgLifecycle * {
-	stroke-width: 30px;
+	stroke-width: 25px;
 	stroke: black;
 	stroke-opacity: 0;
+	transform: scale(1);
+	transform-origin: 50% 50%;
+	transition-duration: var(--svgLifecycle-duration);
 }
 
 g.svgLifecycle:hover * {
-	transition-duration: 0.4s;
 	fill: grey;
 	text-decoration: none;
 }
 
 g.hoverGroup:hover * {
 	fill: var(--ifm-color-secondary);
-	transition-duration: 0.4s;
+	transform: scale(1.02);
+	transform-origin: 50% 50%;
+	transition-duration: var(--svgLifecycle-duration);
 }
 
 g.hoverGroup:hover .svgIconText {
 	font-weight: 700;
-	transform: scale(1.02);
-	transition-duration: 0.4s;
+}
+
+.chemotionLogo {
+	scale: 0.75;
+	transform-origin: 50% 50%;
 }
