fix: update hover fill color to use CSS variable for consistency

--- a/src/components/chemotion/ChemotionLifecycle.module.css
+++ b/src/components/chemotion/ChemotionLifecycle.module.css
@@ -2,6 +2,7 @@
 
 :root {
 	--svgLifecycle-duration: 0.2s;
+	--svgGrayedOut: #c0c0c0;
 }
 
 .svgIcons {
@@ -30,7 +31,7 @@ g.svgLifecycle * {
 
 g.svgLifecycle:hover *,
 g.svgLifecycle:hover + * {
-	fill: grey;
+	fill: var(--svgGrayedOut);
 	text-decoration: none;
 }
 
