feat: add box-shadow to ChemotionCarousel

--- a/src/components/chemotion/ChemotionCarousel.module.css
+++ b/src/components/chemotion/ChemotionCarousel.module.css
@@ -14,6 +14,7 @@
 	align-items: center;
 	margin: 1em;
 	position: relative;
+	box-shadow: 0.6em 0.6em 0.5em -0.75em;
 }
 
 .chemotionCarouselImage {
