--- a/src/components/lbe/lbe.module.css
+++ b/src/components/lbe/lbe.module.css
@@ -7,22 +7,22 @@
 
 /* Search / Filter section */
 
-.lbe__searchfilter {
+.lbeSearchfilter {
 	padding-left: 0.5rem;
 	width: 35%;
 }
 
-.lbe__searchfilter__container {
+.lbeSearchfilterContainer {
 	padding: 0.75rem;
 	border: 1px dashed var(--ifm-color-primary);
 	margin-bottom: 0.75rem;
 }
 
-.lbe__searchfilter__section p {
+.lbeSearchfilterSection p {
 	margin: unset;
 }
 
-.lbe__searchfilter__section h4,
+.lbeSearchfilterSection h4,
 h5 {
 	margin: 0.5rem 0;
 }
@@ -38,7 +38,7 @@ h5 {
 		flex-direction: column;
 	}
 
-	.lbe__searchfilter {
+	.lbeSearchfilter {
 		padding: 0;
 		width: 100%;
 	}
@@ -49,15 +49,15 @@ h5 {
 	}
 }
 
-.lbe__searchfilter input:focus {
+.lbeSearchfilter input:focus {
 	width: calc(5 / 12 * 100%);
 }
 
-.lbe__searchfilter__search {
+.lbeSearchfilter__search {
 	padding: 0.5rem 0;
 }
 
-.lbe__searchfilter__search > em {
+.lbeSearchfilter__search > em {
 	color: var(--ifm-color-primary);
 }
 
