--- a/src/components/lbe/lbe.module.css
+++ b/src/components/lbe/lbe.module.css
@@ -53,17 +53,17 @@ h5 {
 	width: calc(5 / 12 * 100%);
 }
 
-.lbeSearchfilter__search {
+.lbeSearchfilterSearch {
 	padding: 0.5rem 0;
 }
 
-.lbeSearchfilter__search > em {
+.lbeSearchfilterSearch > em {
 	color: var(--ifm-color-primary);
 }
 
 /* Filter buttons */
 
-.lbe__filterbutton {
+.lbeFilterbutton {
 	display: grid;
 	align-items: center;
 	border-radius: var(--ifm-breadcrumb-border-radius);
@@ -84,12 +84,12 @@ h5 {
 	background: var(--ifm-color-primary);
 }
 
-.lbe__filterbutton.lbe__filterbutton_secondary {
+.lbeFilterbuttonSecondary {
 	background: var(--ifm-breadcrumb-item-background-active);
 	color: var(--ifm-color-primary);
 }
 
-.lbe__chip {
+.lbeChip {
 	background: var(--ifm-breadcrumb-item-background-active);
 	color: var(--ifm-color-primary);
 	font-size: calc(0.8rem * var(--ifm-breadcrumb-size-multiplier));
@@ -98,50 +98,50 @@ h5 {
 	margin-bottom: 1rem;
 }
 
-.lbe__filterbutton.lbe__filterbutton--active {
+.lbeFilterbuttonActive {
 	background: var(--ifm-color-danger);
 	color: white;
 }
 
-.lbe__filterbutton:hover,
-.lbe__filterbutton--active:hover {
+.lbeFilterbutton:hover,
+.lbeFilterbuttonActive:hover {
 	cursor: pointer;
 	transform: scale(var(--lbe-hover-scale));
 	transition: transform var(--lbe-transform-time) ease-in-out;
 }
 
-.lbe__filterbutton__content {
+.lbeFilterbuttonContent {
 	display: flex;
 	align-items: center;
 }
 
-.lbe__filterbutton__funnel {
+.lbeFilterbuttonFunnel {
 	height: calc(var(--ifm-font-size-base) * 0.6);
 	fill: white;
 }
 
 /* LBE blocks */
 
-.lbe__block {
+.lbeBlock {
 	padding: 0.75rem;
 	border: 1px dashed var(--ifm-color-primary);
 	margin-bottom: 0.75rem;
 	transition: all var(--n4c-transform-time) ease-in-out;
 }
 
-.lbe__block__header {
+.lbeBlockHeader {
 	display: flex;
 	align-items: center;
 }
 
-.lbe__block__header__title {
+.lbeBlockHeaderTitle {
 	width: 85%;
 	padding: 0.3rem;
 	display: flex;
 	align-items: center;
 }
 
-.lbe__block__author-trigger {
+.lbeBlockAuthorTrigger {
 	border: none;
 	background: none;
 	scale: 90%;
@@ -150,44 +150,44 @@ h5 {
 	margin: 0;
 }
 
-.lbe__block__header__link {
+.lbeBlockHeaderLink {
 	width: 15%;
 	display: flex;
 	justify-content: right;
 }
 
-.lbe__block > h4,
-.lbe__block > p {
+.lbeBlock > h4,
+.lbeBlock > p {
 	margin: 0.5rem;
 	margin-top: 0.8rem;
 }
 
-.lbe__block p:nth-of-type(-n + 2),
-.lbe__block__header__title h3 {
+.lbeBlock p:nth-of-type(-n + 2),
+.lbeBlockHeaderTitle h3 {
 	margin-bottom: calc(0.5 * var(--ifm-leading));
 	text-align: left;
 }
 
 @media screen and (max-width: 966px) {
-	.lbe__block__header {
+	.lbeBlockHeader {
 		display: flex;
 		flex-wrap: wrap-reverse;
 	}
 
-	.lbe__block__header__title,
-	.lbe__block__header__link {
+	.lbeBlockHeaderTitle,
+	.lbeBlockHeaderLink {
 		width: 100%;
 		justify-content: left;
 	}
 }
 
-.lbe__block__hr {
+.lbeBlockHr {
 	border-top: 1px solid var(--ifm-color-primary);
 	background-color: unset;
 	margin: 0.8rem 0.4rem;
 }
 
-.lbe__details {
+.lbeDetails {
 	display: flex;
 	overflow: hidden;
 	border: none;
@@ -196,13 +196,13 @@ h5 {
 	transition: all var(--n4c-transform-time) ease-in-out;
 }
 
-.lbe__details h4 {
+.lbeDetails h4 {
 	color: var(--ifm-color-primary);
 	padding-top: 15px;
 	transition: all var(--n4c-transform-time) ease-in-out;
 }
 
-.lbe__details summary {
+.lbeDetails summary {
 	font-size: var(--ifm-h4-font-size);
 	color: var(--ifm-heading-color);
 	font-family: var(--ifm-heading-font-family);
@@ -211,15 +211,15 @@ h5 {
 	cursor: pointer;
 }
 
-.lbe__details[open] summary {
+.lbeDetails[open] summary {
 	padding-bottom: 15px;
 }
 
-.lbe__details summary::marker {
+.lbeDetails summary::marker {
 	color: var(--ifm-color-primary);
 }
 
-.lbe__block__link {
+.lbeBlockLink {
 	border: 0.5px solid var(--ifm-color-primary);
 	padding: 0.5em;
 	border-radius: 5px;
@@ -228,28 +228,11 @@ h5 {
 	background: none;
 }
 
-.lbe__block__link:hover {
+.lbeBlockLink:hover {
 	transform: scale(var(--lbe-hover-scale));
 	transition: all var(--lbe-transform-time) ease-in-out;
 }
 
-.lbe__block__link a:hover {
+.lbeBlockLink a:hover {
 	text-decoration: none;
-}
-
-/********** Tag Cloud ************/
-
-.tag-cloud {
-	text-align: center;
-	color: var(--ifm-color-primary);
-}
-
-.tag-cloud-tag {
-	padding: 0.2em;
-}
-
-.tag-cloud-tag:hover {
-	transform: scale(1.1);
-	color: var(--ifm-color-danger);
-	transition: all var(--lbe-transform-time) ease-in-out;
 }
